2008-12-17  Armin Burgmeier  <armin@openismus.com>

	* glom/base_db.cc (create_table_with_default_fields): Don't create the
	"comments" and "description" columns if the database system does not
	support removing columns.

	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc
	(fill_values_if_necessary): Adapt to libgdamm API change.
	Gda::DataModelIter::move_at_row has been renamed to move_to_row.

2008-12-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: connect(): Store a cache of the 
	connection for 30 seconds, to avoid unnecessary reconnects. Clear the 
	cache when setting the username/password/database, to force a reconnect.

2008-12-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: 
	refresh_from_database(): Use STATEMENT_MODEL_CURSOR instead of 
	ITER_MODEL_ONLY, as needed by libgda-4.0. 

2008-12-15  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/document/document_glom.cc (set_table_fields): Fixed
	logic so that the document is set to be modified when the new fields
	differ from the old fields, not when they compare equal.

	* glom/libglom/document/document_glom.h: Also copy the m_info member
	in DocumentTableInfo's copy constructor and assignment operator.

	* glom/base_db.cc: Update the libgda meta store after having created a
	new table, so that get_fields_for_table_from_database works correctly
	for the new table. These changes fix creating new tables.

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/connectionpool_backends/sqlite.cc:
	* glom/libglom/data_structure/glomconversions.cc:
	* glom/libglom/document/document_glom.cc:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_portal.cc:
	* glom/mode_data/flowtablewithfields.cc:
	* glom/relationships_overview/dialog_relationships_overview.cc: